fix dashboard on iphone top margin

--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -260,7 +260,7 @@
   .cardsGrid {
     gap: 0.375rem;
     padding: 0;
-    margin-top: 70px;
+    margin-top: 170px;
     width: 100%;
     max-width: 93%;
     overflow-x: hidden;
